# stele-logic

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  GUIDE.md  LICENSE  README.md  RESULTS.md  SECURITY.md  pyproject.toml
bench/: generate.py  labels.jsonl
docs/: audit-public-readiness.md  benchmark-card.md  corpus-generation.md  design-system.md  development-context.md  failure-modes.md  foundations-program.md  limitations.md  metatheory.md  proof-terms.md  provenance-map.md  references.md  release-checklist.md  release-notes-v1.2.0.md  semantics.md  site-quality.md  whitepaper.md
examples/: definition_basic.stele  diag_conclusion.stele  diag_missing.stele  diag_undef.stele  diag_unused.stele  diagnostic_invalid_transition.stele  diagnostic_undefined_definition.stele  dne.stele  dne_law.stele  elaborate_disjunction.stele  elaborate_identity.stele  ex_falso.stele  imp_self.stele  invalid_mp.stele  invalid_scope.stele  lem.stele  matrix_boolean.stele  matrix_k3.stele  matrix_lp.stele  neg_elim.stele  neg_intro.stele  or_comm.stele  or_intro.stele  peirce.stele  valid_and.stele  valid_imp_chain.stele  world_ch_style.py
packaging/: README.md  SteleStudio.spec  build_app.py  smoke_app.py
paper/: README.md  references.bib  stele-whitepaper.tex
site/: about.html  architecture.html  examples_gallery.json  foundations.html  index.html  overview.html  research.html  single_file_template.html  studio.html  theory.html
stele/: __init__.py  __main__.py  ast.py  browser.py  certificate.py  cli.py  diagnostics.py  elaborate.py  errors.py  (+13 more)
(+154 files in other folders)
